# AndroidAudioDemo

./: CopySpecifiedFiles.py  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/tanjiajun/androidaudiodemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  androidaudiodemo.cpp  mp3_encoder.cpp
app/src/main/cpp/lame/: fft.c
app/src/main/java/com/tanjiajun/androidaudiodemo/: AndroidAudioDemoApplication.kt
app/src/main/java/com/tanjiajun/androidaudiodemo/ui/: AudioEditingActivity.kt  MainActivity.kt
app/src/main/java/com/tanjiajun/androidaudiodemo/ui/theme/: Color.kt
app/src/main/java/com/tanjiajun/androidaudiodemo/utils/: AudioFormatConverter.kt  AudioPCMPlayer.kt  AudioPlayer.kt  AudioRecorder.kt  AudioUtils.kt  BooleanExt.kt  CoroutinesExt.kt  Description.kt  LAMEUtils.kt  ToastExt.kt
app/src/main/java/com/tanjiajun/androidaudiodemo/viewmodel/: AudioEditingViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/tanjiajun/androidaudiodemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
